<resources>
    <string name="app_name">智會GO</string>
    <string name="title_activity_login">智會GO-多功能雲端即時會議</string>
    <string name="title_activity_remote"></string>

    <!-- Strings related to login -->
    <string name="label_sign_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to menu -->
    <string name="title_activity_menu">會議清單</string>

    <string name="nav_meeting_join">加入會議</string>
    <string name="nav_meeting_list">會議清單</string>
    <string name="nav_settings">設定</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_before">Before</string>
    <string name="action_next">Next</string>
    <string name="action_cursor">Cursor</string>
    <string name="action_brush">Brush</string>
    <string name="action_eraser">Eraser</string>
    <string name="action_settings">Settings</string>
    <string name="action_connect">Connect</string>
    <string name="title_item_list">會議</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="prompt_meeting_id">會議編號</string>
    <string name="menuitem_add_document">加入文件</string>
    <string name="doc_label_name">Name:</string>
    <string name="link_label_name">Link:</string>
    <string name="menuitem_edit_document">Edit</string>
    <string name="menuitem_delete_document">Delete</string>
    <string name="confirmTitle">Delete</string>
    <string name="confirmMessage">刪除文件？</string>
    <string name="errorTitle">Error</string>
    <string name="errorMessage">Error!</string>
    <string name="errorButton">OK</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="document_name">文件名稱</string>
    <string name="document_link">文件連結</string>
    <string name="button_save_document">Save Document</string>
    <string name="chairman_text">主席</string>
    <string name="controller_text">主控</string>
    <string name="member_text">與會</string>
    <string name="presenter_text">簡報</string>
    <!-- -->
    <string name="title_edit_notes_activity">Note</string>
    <!-- -->
    <string name="no_notes_text">Press \'+\' to add new note</string>
    <string name="note_title">Title</string>
    <string name="note_body">Note</string>
    <!-- -->
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <!-- -->
    <string-array name="colourNames">
        <item>Blue</item>
        <item>Teal</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Red</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>White</item>
    </string-array>
    <!-- -->
    <string-array name="fontSizeNames">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <!-- -->
    <string name="action_search">Search</string>
    <string name="action_rate_app">Rate app</string>
    <string name="action_backup">Backup notes</string>
    <string name="action_restore">Restore notes</string>
    <string name="action_note_colour">Note colour</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_selected_number">Selected</string>
    <string name="action_font_size">Note font size</string>
    <string name="action_hide_body">Hide note body in list</string>
    <string name="action_show_body">Show note body in list</string>
    <!-- -->
    <string name="dialog_delete">Selected notes will be deleted!</string>
    <string name="dialog_note_colour">Change note colour</string>
    <string name="dialog_save_changes">Save changes?</string>
    <string name="dialog_font_size">Change note font size</string>
    <string name="dialog_rate_title">Rate app</string>
    <string name="dialog_rate_message">Open app in Play Store?
        (Thank you for rating! We really appreciate it!)</string>
    <string name="dialog_check_backup_if_sure">Are you sure you want to backup current notes?</string>
    <string name="dialog_backup_created_title">Backup successful</string>
    <string name="dialog_backup_created">Backup created in</string>
    <string name="dialog_check_restore_if_sure">Are you sure you want to restore backup notes?
        (Cannot be undone)</string>
    <string name="dialog_restore_failed_title">No backup found</string>
    <string name="dialog_restore_failed">To restore notes, the backup file
        has to be in \'External/Swiftnotes/swiftnotes_backup.json\'</string>
    <!-- -->
    <string name="new_note_content_description">New note</string>
    <string name="favourite_content_description">Favourite</string>
    <!-- -->
    <string name="toast_deleted">Delete successful</string>
    <string name="toast_new_note">Note created</string>
    <string name="toast_note_saved">Note saved</string>
    <string name="toast_empty_note_discarded">Empty note discarded</string>
    <string name="toast_edittext_cannot_be_empty">Title cannot be empty</string>
    <string name="toast_note_body_hidden">Note body will now be hidden in notes list</string>
    <string name="toast_note_body_showing">Note body will now be shown in notes list</string>
    <string name="toast_backup_failed">Backup unsuccessful</string>
    <string name="toast_backup_no_notes">No notes to backup</string>
    <string name="toast_restore_successful">Notes restored</string>
    <string name="toast_restore_unsuccessful">Restore unsuccessful</string>
    <string name="poll_title">Title</string>
    <string name="poll_body">Poll</string>
</resources>
