<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/document_name"
            android:id="@+id/nameEditText" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/document_link"
            android:id="@+id/linkEditText" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/button_save_document"
            android:id="@+id/saveDocumentButton" />
    </ScrollView>
</LinearLayout>